Fixed menu alignment issue. Fixes #52.

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -728,8 +728,8 @@ textarea {
 		display: block;
 		position: relative;
 		color: $c_navMainLink;
-		padding: 10px 0px;
-		margin: 0px 10px;
+		padding: 10px 0;
+		margin: 0 0 0 20px;
 		font: {
 			size: 17px;
 			weight: 400;
